# goit-soft_wear-hw-09

./: README.md  pyproject.toml
quotes_scraper/: items.py  settings.py
quotes_scraper/spiders/: quotes_spider.py
